Adds Dreamhost, updates Index

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
   }
   article{
     display: inline-block;
-    padding: 10px 25px 20px;
+    padding: 0px 25px;
     border: 5px solid white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
   }
   p{
     font-family: 'Merriweather', serif;
@@ -90,22 +93,23 @@
     <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
     <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
     <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-    <!--<i class="fa fa-empire" style="font-size:36px;color:white"></i>-->
+    <a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>
   </button>
 </nav>
 <div class="news">
 <h1>News</h1>
 <article>
 <h2>KILL ME PLEASE</h2>
-<!-- start slipsum code -->
-
 <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
-
 <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-
 <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-
-<!-- end slipsum code --></article>
+</article>
+<article>
+<h2>KILL ME Again</h2>
+<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
+<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
+<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
+</article>
 </div>
 <footer>
 <p>©2018 Pity Pattern</p>
