--- a/index.html
+++ b/index.html
@@ -3,86 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
-  <style type="text/css">
-  body{
-    background-color: black;
-  }
-  nav{
-    display: block;
-    text-align: right;
-  }
-  nav a{
-    font-family: 'Oswald', sans-serif;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 30px;
-    color: white;
-    text-decoration: none;
-    background: none;
-  }
-  nav a:hover{
-    color: black;
-    text-decoration: none;
-    background: white;
-  }
-  /*nav a:hover{
-    opacity: 0.5;
-  }*/
-  nav button{
-    border: 5px solid white;
-    background: none;
-    height: 56px;
-    margin-bottom: 5px;
-  }
-  nav button:hover{
-    background-color: white;
-  }
-  nav button i{
-    padding: 2px;
-  }
-  nav button a i:hover{
-    color: black!important;
-  }
-  h1{
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    text-transform: uppercase;
-    border: 5px solid white;
-    width: fit-content;
-    padding: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5px;
-  }
-  h2{
-    font-family: 'Oswald', sans-serif;
-    text-decoration: underline;
-    color: white;
-    width: fit-content;
-  }
-  article{
-    display: inline-block;
-    padding: 0px 25px;
-    border: 5px solid white;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-  }
-  p{
-    font-family: 'Merriweather', serif;
-    color: white;
-  }
-  .news{
-    padding: 5px 25px;
-  }
-  footer p{
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-    color: white;
-    text-transform: uppercase;
-    color: white;
-  }
-  </style>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <nav>
