--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Pity Pattern</title>
+  <meta property="og:title" content="Pity Pattern" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
