--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </article>
 </div>
 <footer>
-<p>&copy;2018 Pity Pattern 4Yoooo</p>
+<p>&copy;2018 Pity Pattern DUDE</p>
 </footer>
 </body>
 </html>
