What am I even doing

--- a/tour.html
+++ b/tour.html
@@ -8,17 +8,17 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<nav>
-  <button><a href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a></button>
-  <button><a href="/tour/">Tour</a></button>
-  <button><a href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a></button>
-  <button>
-    <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
-    <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>
-  </button>
-</nav>
+  <nav>
+    <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
+    <a class="bold-button" href="/tour/">Tour</a>
+    <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
+    <button class="bold-button">
+      <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
+      <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
+      <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
+      <a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>
+    </button>
+  </nav>
 <div class="tour">
   <h1>Tour</h1>
   <table>
@@ -30,7 +30,7 @@
    <tr>
      <td>Jill</td>
      <td>Smith</td>
-     <td><button>Buy Those Suckers</button></td>
+     <td><a class="bold-button">Buy Those Suckers</a></td>
    </tr>
    <tr>
      <td>Eve</td>
