--- a/tour.html
+++ b/tour.html
@@ -28,14 +28,14 @@
      <th>Tickets</th>
    </tr>
    <tr>
-     <td>Jill</td>
-     <td>Smith</td>
+     <td>September 2st</td>
+     <td>Crazy Town</td>
      <td><a class="bold-button">Buy Those Suckers</a></td>
    </tr>
    <tr>
-     <td>Eve</td>
-     <td>Jackson</td>
-     <td>94</td>
+     <td>October 94th</td>
+     <td>Partyville</td>
+     <td><a class="bold-button">Buy Those Suckers</a></td>
    </tr>
  </table>
 <footer>
