--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:title" content="Pity Pattern" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="test.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <nav>
