--- a/tour.html
+++ b/tour.html
@@ -10,7 +10,7 @@
 <body>
   <nav>
     <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
-    <a class="bold-button" href="/tour/">Tour</a>
+    <a class="bold-button" href="/tour">Tour</a>
     <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
     <button class="bold-button">
       <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
