--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav>
-  <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music?</a>
+  <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
   <a class="bold-button" href="/tour">Tour</a>
   <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
   <button class="bold-button">
