--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
     <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
     <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>
+    <!--<a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>-->
   </button>
 </nav>
 <div class="news">
