--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 </nav>
 <h1>Whoops</h1>
 <div align="center">
-<a class="bold-button" href="pitypattern.com"style="font-size:36px;">Back to Safety</a>
+<a class="bold-button" href=""style="font-size:36px;">Back to Safety</a>
 </div>
 <footer>
 <p>&copy;2018 Pity Pattern</p>
