Adds GA Script, proper indentation

--- a/tour.html
+++ b/tour.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115308553-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115308553-1');
+    </script>
+  <!-- End GA Script -->
   <title>Pity Pattern - Tour</title>
   <meta property="og:title" content="Pity Pattern - Tour" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,27 +29,27 @@
       <!--<a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>-->
     </button>
   </nav>
-<div class="tour">
-  <h1>Tour</h1>
-  <table>
-   <tr>
-     <th>Date</th>
-     <th>Location</th>
-     <th>Tickets</th>
-   </tr>
-   <tr>
-     <td>September 2st</td>
-     <td>Crazy Town</td>
-     <td><a class="bold-button">Buy Those Suckers</a></td>
-   </tr>
-   <tr>
-     <td>October 94th</td>
-     <td>Partyville</td>
-     <td><a class="bold-button">Buy Those Suckers</a></td>
-   </tr>
- </table>
-<footer>
-<p>&copy;2018 Pity Pattern</p>
-</footer>
+  <div class="tour">
+    <h1>Tour</h1>
+    <table>
+     <tr>
+       <th>Date</th>
+       <th>Location</th>
+       <th>Tickets</th>
+     </tr>
+     <tr>
+       <td>September 2st</td>
+       <td>Crazy Town</td>
+       <td><a class="bold-button">Buy Those Suckers</a></td>
+     </tr>
+     <tr>
+       <td>October 94th</td>
+       <td>Partyville</td>
+       <td><a class="bold-button">Buy Those Suckers</a></td>
+     </tr>
+   </table>
+  <footer>
+    <p>&copy;2018 Pity Pattern</p>
+  </footer>
 </body>
 </html>
