--- a/404.html
+++ b/404.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115308553-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115308553-1');
+    </script>
+  <!-- End GA Script -->
   <title>Pity Pattern</title>
   <meta property="og:title" content="Pity Pattern" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -8,23 +18,23 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<nav>
-  <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
-  <!--<a class="bold-button" href="/tour">Tour</a>-->
-  <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
-  <button class="bold-button">
-    <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
-    <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-    <!--<a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>-->
-  </button>
-</nav>
-<h1>Whoops</h1>
-<div align="center">
-<a class="bold-button" href="http://www.pitypattern.com"style="font-size:36px;">Back to Safety</a>
-</div>
-<footer>
-<p>&copy;2018 Pity Pattern</p>
-</footer>
+  <nav>
+    <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
+    <!--<a class="bold-button" href="/tour">Tour</a>-->
+    <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
+    <button class="bold-button">
+      <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
+      <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
+      <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
+      <!--<a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>-->
+    </button>
+  </nav>
+  <h1>Whoops</h1>
+  <div align="center">
+    <a class="bold-button" href="http://www.pitypattern.com"style="font-size:36px;">Back to Safety</a>
+  </div>
+  <footer>
+    <p>&copy;2018 Pity Pattern</p>
+  </footer>
 </body>
 </html>
