--- a/test.html
+++ b/test.html
@@ -8,32 +8,14 @@
   <link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
-<nav>
-  <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
-  <a class="bold-button" href="/tour/">Tour</a>
-  <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
-  <button class="bold-button">
-    <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
-    <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-    <a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>
-  </button>
-</nav>
-<div class="news">
-<h1>News</h1>
-<article>
-<h2>KILL ME PLEASE</h2>
-<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
-<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-</article>
-<article>
-<h2>KILL ME Again</h2>
-<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
-<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-</article>
-</div>
+<h1>Pity Pattern</h1>
+<div id="blocks">
+  <a href=""><div class="block block-1">
+  </div></a>
+  <a href=""><div class="block block-2">
+  </div></a>
+  <a href=""><div class="block block-3">
+  </div></a>
 <footer>
 <p>&copy;2018 Pity Pattern</p>
 </footer>
