--- a/index.html
+++ b/index.html
@@ -1,51 +1,161 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115420733-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115420733-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'UA-115420733-1');
-  </script>
-  <!-- End GA Script -->
-  <title>Pity Pattern</title>
-  <meta property="og:title" content="Pity Pattern" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-  <nav>
-    <a class="bold-button" href="https://pitypattern.bandcamp.com/music" target="_blank">Music</a>
-    <!--<a class="bold-button" href="/tour">Tour</a>-->
-    <a class="bold-button" href="https://pitypattern.bandcamp.com/merch" target="_blank">Shop</a>
-    <button class="bold-button">
-      <a href="https://www.facebook.com/pitypattern/" target="_blank"><i class="fa fa-facebook" style="font-size:36px;color:white"></i></a>
-      <a href="https://www.instagram.com/pitypattern/" target="_blank"><i class="fa fa-instagram" style="font-size:36px;color:white"></i></a>
-      <a href="mailto:hi@pitypattern.com" target="_blank"><i class="fa fa-envelope" style="font-size:36px;color:white"></i></a>
-      <!--<a href="https://www.youtube.com/watch?v=HPPj6viIBmU" target="_blank"><i class="fa fa-empire" style="font-size:36px;color:white"></i></a>-->
-    </button>
-  </nav>
-  <div class="news">
-    <h1>News</h1>
-    <article>
-    <h2>KILL ME PLEASE</h2>
-    <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
-    <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-    <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-    </article>
-    <article>
-    <h2>KILL ME Again</h2>
-    <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
-    <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-    <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends. </p>
-    </article>
-  </div>
-  <footer>
-    <p>&copy;2018 Pity Pattern</p>
-  </footer>
-</body>
+        gtag('config', 'UA-115420733-1');
+    </script>
+    <!-- End GA Script -->
+    <title>Pity Pattern</title>
+    <meta property="og:title" content="Pity Pattern" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Site CSS-->
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+    
+  </head>
+  <body>
+    <section id="nav">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="#"><h1>Pity Pattern</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
+                    <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
+                    <a class="nav-item nav-link" href="#shows">Shows</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <section id="hero">
+        <div class="container">
+            <div class="row" id="hero-row">
+                <div class="col-lg-6 col-sm-8 mx-auto mt-3">
+                    <img src="assets/imgs/PP-SAAFE-Window.png" class="img-fluid" />
+                </div>
+                <div class="col-lg-6 col-sm-12 mt-3">
+                    <h2>Pity Pattern</h2>
+                    <h2>Sorry,<br>As Always,<br>For Everything.</h2>
+                    <h2>1/8/2019</h2>
+                    <div class="row mx-auto mt-4 rounded">
+                        <div class="my-auto mx-auto w-75 rounded">
+                            <img src="assets/imgs/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
+                        </div> 
+                        <div class="my-auto mx-auto w-75 rounded">
+                            <img src="assets/imgs/logos/bandcamp-logo.png" class="img-fluid service-logo" />
+                        </div>
+                        <div class="my-auto mx-auto w-75 rounded">
+                            <img src="assets/imgs/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
+                        </div> 
+                    </div>
+                </div>
+            </div>    
+        </div>
+    </section>
+    <section id="video">
+        <div class="container">
+            <div class="row my-3">
+                <h3>Hey, we're Pity Pattern (Video)</h3>
+            </div>
+        </div>
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nRbTnE4QLxE"></iframe>
+        </div>
+    </section>
+    <section id="recording-pics">
+        <div class="container">
+            <div class="row my-3">
+                <h3>Recording Pictures (2018)</h3>
+            </div>
+        </div>
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/listening_back.jpg" alt="Listening back">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/devin_tracking_bass.jpg" alt="Devin tracking bass">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam_tracking_drums.jpg" alt="Adam tracking drums">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/chris_at_desk.jpg" alt="Chris at desk">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/dev.JPG" alt="Devin smiling">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/getting_drum_sounds.JPG" alt="Getting drum sounds">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/devin_tracking_bass_2.JPG" alt="Devin tracking bass again">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam_setting_up.JPG" alt="Adam getting sounds">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/drums_miced_up.JPG" alt="Drums miced up">
+                        </div>
+                        <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam.JPG" alt="Adam">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+            </div>
+        </div>
+    </section>
+    <section id="shows">
+        <div class="container">
+            <div class="row my-3">
+                <h3>Shows</h3>
+            </div>
+        </div>
+        <div class="container">
+            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#000000" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)"></a>
+        </div>
+    </section>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
