--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -40,6 +43,9 @@
                     <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
                     <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
                     <a class="nav-item nav-link" href="#shows">Shows</a>
+                    <a href="https://www.facebook.com/pitypattern/" class="my-auto fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/pitypattern/" class="my-auto fa fa-instagram"></a>
+                    <a href="mailto:pitypattern@gmail.com" class="my-auto fa fa-envelope"></a>
                     </div>
                 </div>
             </nav>
@@ -56,13 +62,13 @@
                     <h2>Sorry,<br>As Always,<br>For Everything.</h2>
                     <h2>1/8/2019</h2>
                     <div class="row mx-auto mt-4 rounded">
-                        <div class="my-auto mx-auto w-65 rounded">
+                        <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
                         </div> 
-                        <div class="my-auto mx-auto w-65 rounded">
+                        <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo" />
                         </div>
-                        <div class="my-auto mx-auto w-65 rounded">
+                        <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
                         </div> 
                     </div>
