--- a/index.html
+++ b/index.html
@@ -58,15 +58,24 @@
                     <img src="assets/img/PP-SAAFE-Window.png" class="img-fluid" />
                 </div>
                 <div class="col-lg-6 col-sm-12 mt-3">
-                    <h2>Pity Pattern</h2>
-                    <h2>Sorry,<br>As Always,<br>For Everything.</h2>
-                    <h2>1/8/2019</h2>
+                    <div class="row">
+                        <div class="col-6">
+                            <h2>Pity Pattern</h2>
+                            <h2>Sorry, As Always, For Everything.</h2>
+                        </div>
+                        <div class="col-6 text-right">
+                            <h2>1/8/2019</h2>
+                        </div>
+                    </div>
+                    
                     <div class="row mx-auto mt-4 rounded">
                         <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
                         </div> 
                         <div class="my-auto mx-auto col-7">
-                            <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo" />
+                            <a href="https://pitypattern.bandcamp.com/music/sorry-as-always-for-everything">
+                                <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo" />
+                            </a>
                         </div>
                         <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
@@ -79,17 +88,19 @@
     <section id="video">
         <div class="container">
             <div class="row my-3">
-                <h3>Hey, we're Pity Pattern (video)</h3>
+                <h3>Hey, we're Pity Pattern.</h3>
             </div>
         </div>
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nRbTnE4QLxE"></iframe>
+        <div class="container">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nRbTnE4QLxE"></iframe>
+            </div>
         </div>
     </section>
     <section id="recording-pics">
         <div class="container">
             <div class="row my-3">
-                <h3>Recording Pictures</h3>
+                <h3>Recording (2018)</h3>
             </div>
         </div>
         <div class="container">
