--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
                     <div class="row">
                         <div class="col-6">
                             <h2>Pity Pattern</h2>
-                            <h2>Sorry, As Always, For Everything.</h2>
                         </div>
                         <div class="col-6 text-right">
+                            <h2>Sorry, As Always, For Everything.</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center">
                             <h2>1/8/2019</h2>
                         </div>
                     </div>
